# grackle-zero

./: '  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/actions/: build.yaml
.github/workflows/: build.yaml
docs/: README.md  cleanup-appcontainers.ps1  linux.md  macos.md  windows.md
examples/: README.md  piped.rs
src/: comm.rs  integration_tests.rs  lib.rs  macros.rs  restrictions.rs  runtime.rs
src/comm/: event.rs  packet.rs  rwutil.rs  sizedpacket.rs  splitter.rs
src/integration_tests/: executables.rs  handler.rs  server.rs  state.rs  util.rs
src/runtime/: error.rs  spawn.rs  spawn_darwin.rs  spawn_linux.rs  spawn_win.rs  spawn_windows.rs
src/runtime/spawn_linux/: call_names.rs  dependencies.rs  fd.rs  jail.rs  launch.rs
src/runtime/spawn_windows/: appcontainer.rs  attribute_list.rs  conv.rs  desktop.rs  error.rs  fd.rs  jail.rs  launch.rs  launch_quote.rs  monitor.rs  os_lock.rs  process.rs  process_token.rs  rand.rs  sec_attributes.rs  sid.rs
test-bin/: Makefile  README.md
test-bin/clipboard/: Cargo.toml  README.md
test-bin/clipboard/src/: action.rs
test-bin/cpuid/: Cargo.toml  README.md
test-bin/cpuid/src/: action.rs
test-bin/exec-self/: Cargo.toml  README.md
test-bin/exec-self/src/: action.rs  debug.rs
test-bin/file-read/: Cargo.toml  README.md
test-bin/file-read/src/: action.rs
test-bin/gui/: Cargo.toml  Makefile  README.md
test-bin/gui/src/: action.rs
test-bin/noop/src/: action.rs
test-bin/simple-c/: Makefile  README.md  main.c
test-bin/simple-cfg/: Makefile  README.md  main.c  verify.ps1
test-bin/simple-rust/: Cargo.toml  README.md
test-bin/tcpip/: Cargo.toml  README.md
tests/: 00-simple.rs  01-executables.rs  Makefile  README.md  executables.rs
tests/common/: gen_r.rs  handler.rs  mod.rs  server.rs  simple_handler.rs  state.rs  util.rs
tests/cpuid/src/: action.rs
tests/exec-self/src/: main.rs
tests/file-read/: Makefile
tests/file-read/src/: main.rs
tests/noop/: README.md
tests/noop/src/: main.rs
tests/tcpip/src/: action.rs  main.rs
