[package]
name = "gracklezero"
description = "Communication and spawn capability for child processes with zero permissions."
version = "0.1.0"
license = "MIT"
edition = "2024"
keywords = ["access-control", "sandbox", "security"]
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "src/**/*.rs",
]

[features]
default = []


[dependencies]
which = "8.0.0"


[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.4"
lddtree = "0.4.0"
libseccomp = "0.4.0"
nix = { version = "0.31.1", features = [
    "process", "signal", "fs", "feature", "resource",
    "user",
] }

# libseccomp documentation includes the note:
# > if you want to use the libseccomp crate against musl-libc with statically
# > linked the libseccomp library, you have to set the LIBSECCOMP_LINK_TYPE
# > and LIBSECCOMP_LIB_PATH environment variables as follows.
# > ```
# > $ export LIBSECCOMP_LINK_TYPE=static
# > $ export LIBSECCOMP_LIB_PATH="the path of the directory containing libseccomp.a (e.g. /usr/lib)"
# > ```

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System", "Win32_System_Console"] }
windows-result = "0.4.1"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Isolation",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_System_Pipes",
  "Win32_System_SystemServices",
  "Win32_Storage_FileSystem",
] }
winapi = { version = "0.3.9", features = ["sddl", "winbase"] }


[dev-dependencies]
tempfile = "3.24.0"
